Resueltos problemas de funcionalidad indicados en testeos por tester etapa 1. Siendo los problemas solucionados: - Salta una excepción si no hay conexión con la BBDD, y esto es un tema de Usabilidad porque no arranca la APP. Incluso si arrancase pero no avisase, también seguiría siendo un error. - Falta el Mnemonic Parsing                                                                                                                                                                                                                                                                                                          - Podrias haber usado el .setDefaultButton(true) al botón de Entrar en el menú de inicio.                                                                                                                                                                                                                                                                                                          - No tiene mucho sentido poner el icono de conectado a la base de datos una vez que ya has entrado. Tendría más sentido poner un "Hay conexión" en el menú de Login.                                                                                                                                                                                                                                                                                                          - Lo suyo hubiera sido que, al crear una cita, hubiera una búsqueda autocompletada en vez de poner el DNI directamente, es una ayuda.                                                                                                                                                                                                                                                                                                          - Hubiera estado bien puentear el "Abrir" de pacientes al darle doble click al paciente en sí.